# kubectl-select

./: Cargo.toml  Makefile  README.md  reference-script.sh
.github/workflows/: rust.yml
src/: bindings.rs  kubectl.rs  main.rs
