[package]
name = "kubectl-select"
version = "0.1.0"
authors = ["Jacobious52 <jacobgonzalez5252@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
subprocess = "0.2"
skim = "0.8"
clipboard = "0.5"
tabwriter = "1"
